blocks/profile/__subtitle/profile__subtitle.css
.profile__subtitle {
    font-size: 18px;
    line-height: 22px;
    margin: 0;
    flex-basis: 100%;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    max-width: 318px;

}


@media screen and (max-width: 730px) {
    .profile__subtitle {
        margin-left: 70px;
        font-size: 14px;
        line-height: 17px;
        text-align: center;
        max-width: 201px;
    }
}

